--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
-    <head>
-        <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
-        <meta
-            name="description"
-            content="Web site created using create-react-app"
-        />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-        <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <title>React App</title>
-    </head>
+<html lang="it" data-bs-theme="dark">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/SnakeBee.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#228B22" />
+    <meta
+      name="description"
+      content="SnakeBee è il gestionale definitivo per allevatori di rettili. Traccia alimentazione, eventi, riproduzione e altro ancora!"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.svg" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <body>
-        <div id="root"></div>
+    <title>SnakeBee | Il tuo gestionale per rettili</title>
 
-    </body>
+    <!-- Open Graph per condivisione social -->
+    <meta property="og:title" content="SnakeBee - Il gestionale per i tuoi rettili" />
+    <meta property="og:description" content="Traccia facilmente alimentazioni, eventi e tanto altro. Dedicato agli amanti dei serpenti!" />
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://snakebee.it" />
+  </head>
+
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
